--- a/src/index.html
+++ b/src/index.html
@@ -3,113 +3,113 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link href="css/bootstrap.css" rel="stylesheet" type = "text/css">
-  <link href="css/styles.css" rel="stylesheet" type = "text/css">
-  <script src="js/jquery-3.5.1.js"></script>
-  <script src="js/scripts.js"></script>
   <title>Document</title>
 </head>
 <body>
-  <table>
-    <tr>
-      <td><input id="08" type="text" maxlength="1"></td>
-      <td><input id="18" type="text" maxlength="1"></td>
-      <td><input id="28" type="text" maxlength="1"></td>
-      <td><input id="38" type="text" maxlength="1"></td>
-      <td><input id="48" type="text" maxlength="1"></td>
-      <td><input id="58" type="text" maxlength="1"></td>
-      <td><input id="68" type="text" maxlength="1"></td>
-      <td><input id="78" type="text" maxlength="1"></td>
-      <td><input id="88" type="text" maxlength="1"></td>
-    </tr>
-    <tr>
-      <td><input id="07" type="text" maxlength="1"></td>
-      <td><input id="17" type="text" maxlength="1"></td>
-      <td><input id="27" type="text" maxlength="1"></td>
-      <td><input id="37" type="text" maxlength="1"></td>
-      <td><input id="47" type="text" maxlength="1"></td>
-      <td><input id="57" type="text" maxlength="1"></td>
-      <td><input id="67" type="text" maxlength="1"></td>
-      <td><input id="77" type="text" maxlength="1"></td>
-      <td><input id="87" type="text" maxlength="1"></td>
-    </tr>
-    <tr>
-      <td><input id="06" type="text" maxlength="1"></td>
-      <td><input id="16" type="text" maxlength="1"></td>
-      <td><input id="26" type="text" maxlength="1"></td>
-      <td><input id="36" type="text" maxlength="1"></td>
-      <td><input id="46" type="text" maxlength="1"></td>
-      <td><input id="56" type="text" maxlength="1"></td>
-      <td><input id="66" type="text" maxlength="1"></td>
-      <td><input id="76" type="text" maxlength="1"></td>
-      <td><input id="86" type="text" maxlength="1"></td>
-    </tr>
-    <tr>
-      <td><input id="05" type="text" maxlength="1"></td>
-      <td><input id="15" type="text" maxlength="1"></td>
-      <td><input id="25" type="text" maxlength="1"></td>
-      <td><input id="35" type="text" maxlength="1"></td>
-      <td><input id="45" type="text" maxlength="1"></td>
-      <td><input id="55" type="text" maxlength="1"></td>
-      <td><input id="65" type="text" maxlength="1"></td>
-      <td><input id="75" type="text" maxlength="1"></td>
-      <td><input id="85" type="text" maxlength="1"></td>
-    </tr>
-    <tr>
-      <td><input id="04" type="text" maxlength="1"></td>
-      <td><input id="14" type="text" maxlength="1"></td>
-      <td><input id="24" type="text" maxlength="1"></td>
-      <td><input id="34" type="text" maxlength="1"></td>
-      <td><input id="44" type="text" maxlength="1"></td>
-      <td><input id="54" type="text" maxlength="1"></td>
-      <td><input id="64" type="text" maxlength="1"></td>
-      <td><input id="74" type="text" maxlength="1"></td>
-      <td><input id="84" type="text" maxlength="1"></td>
-    </tr>
-    <tr>
-      <td><input id="03" type="text" maxlength="1"></td>
-      <td><input id="13" type="text" maxlength="1"></td>
-      <td><input id="23" type="text" maxlength="1"></td>
-      <td><input id="33" type="text" maxlength="1"></td>
-      <td><input id="43" type="text" maxlength="1"></td>
-      <td><input id="53" type="text" maxlength="1"></td>
-      <td><input id="63" type="text" maxlength="1"></td>
-      <td><input id="73" type="text" maxlength="1"></td>
-      <td><input id="83" type="text" maxlength="1"></td>
-    </tr>
-    <tr>
-      <td><input id="02" type="text" maxlength="1"></td>
-      <td><input id="12" type="text" maxlength="1"></td>
-      <td><input id="22" type="text" maxlength="1"></td>
-      <td><input id="32" type="text" maxlength="1"></td>
-      <td><input id="42" type="text" maxlength="1"></td>
-      <td><input id="52" type="text" maxlength="1"></td>
-      <td><input id="62" type="text" maxlength="1"></td>
-      <td><input id="72" type="text" maxlength="1"></td>
-      <td><input id="82" type="text" maxlength="1"></td>
-    </tr>
-    <tr>
-      <td><input id="01" type="text" maxlength="1"></td>
-      <td><input id="11" type="text" maxlength="1"></td>
-      <td><input id="21" type="text" maxlength="1"></td>
-      <td><input id="31" type="text" maxlength="1"></td>
-      <td><input id="41" type="text" maxlength="1"></td>
-      <td><input id="51" type="text" maxlength="1"></td>
-      <td><input id="61" type="text" maxlength="1"></td>
-      <td><input id="71" type="text" maxlength="1"></td>
-      <td><input id="81" type="text" maxlength="1"></td>
-    </tr>
-    <tr>
-      <td><input id="00" type="text" maxlength="1"></td>
-      <td><input id="10" type="text" maxlength="1"></td>
-      <td><input id="20" type="text" maxlength="1"></td>
-      <td><input id="30" type="text" maxlength="1"></td>
-      <td><input id="40" type="text" maxlength="1"></td>
-      <td><input id="50" type="text" maxlength="1"></td>
-      <td><input id="60" type="text" maxlength="1"></td>
-      <td><input id="70" type="text" maxlength="1"></td>
-      <td><input id="80" type="text" maxlength="1"></td>
-    </tr>
-  </table>
+  <form id="sudoku">
+    <table>
+      <tr>
+        <td><input id="08" type="number" maxlength="1"></td>
+        <td><input id="18" type="number" maxlength="1"></td>
+        <td><input id="28" type="number" maxlength="1"></td>
+        <td><input id="38" type="number" maxlength="1"></td>
+        <td><input id="48" type="number" maxlength="1"></td>
+        <td><input id="58" type="number" maxlength="1"></td>
+        <td><input id="68" type="number" maxlength="1"></td>
+        <td><input id="78" type="number" maxlength="1"></td>
+        <td><input id="88" type="number" maxlength="1"></td>
+      </tr>
+      <tr>
+        <td><input id="07" type="number" maxlength="1"></td>
+        <td><input id="17" type="number" maxlength="1"></td>
+        <td><input id="27" type="number" maxlength="1"></td>
+        <td><input id="37" type="number" maxlength="1"></td>
+        <td><input id="47" type="number" maxlength="1"></td>
+        <td><input id="57" type="number" maxlength="1"></td>
+        <td><input id="67" type="number" maxlength="1"></td>
+        <td><input id="77" type="number" maxlength="1"></td>
+        <td><input id="87" type="number" maxlength="1"></td>
+      </tr>
+      <tr>
+        <td><input id="06" type="number" maxlength="1"></td>
+        <td><input id="16" type="number" maxlength="1"></td>
+        <td><input id="26" type="number" maxlength="1"></td>
+        <td><input id="36" type="number" maxlength="1"></td>
+        <td><input id="46" type="number" maxlength="1"></td>
+        <td><input id="56" type="number" maxlength="1"></td>
+        <td><input id="66" type="number" maxlength="1"></td>
+        <td><input id="76" type="number" maxlength="1"></td>
+        <td><input id="86" type="number" maxlength="1"></td>
+      </tr>
+      <tr>
+        <td><input id="05" type="number" maxlength="1"></td>
+        <td><input id="15" type="number" maxlength="1"></td>
+        <td><input id="25" type="number" maxlength="1"></td>
+        <td><input id="35" type="number" maxlength="1"></td>
+        <td><input id="45" type="number" maxlength="1"></td>
+        <td><input id="55" type="number" maxlength="1"></td>
+        <td><input id="65" type="number" maxlength="1"></td>
+        <td><input id="75" type="number" maxlength="1"></td>
+        <td><input id="85" type="number" maxlength="1"></td>
+      </tr>
+      <tr>
+        <td><input id="04" type="number" maxlength="1"></td>
+        <td><input id="14" type="number" maxlength="1"></td>
+        <td><input id="24" type="number" maxlength="1"></td>
+        <td><input id="34" type="number" maxlength="1"></td>
+        <td><input id="44" type="number" maxlength="1"></td>
+        <td><input id="54" type="number" maxlength="1"></td>
+        <td><input id="64" type="number" maxlength="1"></td>
+        <td><input id="74" type="number" maxlength="1"></td>
+        <td><input id="84" type="number" maxlength="1"></td>
+      </tr>
+      <tr>
+        <td><input id="03" type="number" maxlength="1"></td>
+        <td><input id="13" type="number" maxlength="1"></td>
+        <td><input id="23" type="number" maxlength="1"></td>
+        <td><input id="33" type="number" maxlength="1"></td>
+        <td><input id="43" type="number" maxlength="1"></td>
+        <td><input id="53" type="number" maxlength="1"></td>
+        <td><input id="63" type="number" maxlength="1"></td>
+        <td><input id="73" type="number" maxlength="1"></td>
+        <td><input id="83" type="number" maxlength="1"></td>
+      </tr>
+      <tr>
+        <td><input id="02" type="number" maxlength="1"></td>
+        <td><input id="12" type="number" maxlength="1"></td>
+        <td><input id="22" type="number" maxlength="1"></td>
+        <td><input id="32" type="number" maxlength="1"></td>
+        <td><input id="42" type="number" maxlength="1"></td>
+        <td><input id="52" type="number" maxlength="1"></td>
+        <td><input id="62" type="number" maxlength="1"></td>
+        <td><input id="72" type="number" maxlength="1"></td>
+        <td><input id="82" type="number" maxlength="1"></td>
+      </tr>
+      <tr>
+        <td><input id="01" type="number" maxlength="1"></td>
+        <td><input id="11" type="number" maxlength="1"></td>
+        <td><input id="21" type="number" maxlength="1"></td>
+        <td><input id="31" type="number" maxlength="1"></td>
+        <td><input id="41" type="number" maxlength="1"></td>
+        <td><input id="51" type="number" maxlength="1"></td>
+        <td><input id="61" type="number" maxlength="1"></td>
+        <td><input id="71" type="number" maxlength="1"></td>
+        <td><input id="81" type="number" maxlength="1"></td>
+      </tr>
+      <tr>
+        <td><input id="00" type="number" maxlength="1"></td>
+        <td><input id="10" type="number" maxlength="1"></td>
+        <td><input id="20" type="number" maxlength="1"></td>
+        <td><input id="30" type="number" maxlength="1"></td>
+        <td><input id="40" type="number" maxlength="1"></td>
+        <td><input id="50" type="number" maxlength="1"></td>
+        <td><input id="60" type="number" maxlength="1"></td>
+        <td><input id="70" type="number" maxlength="1"></td>
+        <td><input id="80" type="number" maxlength="1"></td>
+      </tr>
+    </table>
+    <button type="submit" class="btn">Check your solution</button>
+  </form>
+  <div id="output"></div>
 </body>
 </html>
